--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "crons": [
     {
       "path": "/api/stock-sync",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 6 * * *"
     },
     {
       "path": "/api/order-status-sync",
-      "schedule": "0 */2 * * *"
+      "schedule": "0 12 * * *"
     }
   ]
 }
